--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: demo-privider
+    name: service-privider-user
   jpa:
     generate-ddl: false
     show-sql: true
@@ -13,6 +13,14 @@ spring:
         platform: h2 #指定数据库
         schema: classpath:schema.sql #指定建表
         data: classpath:data.sql #指定数据
+  eureka:
+    client:
+      serviceUrl:
+        defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
+    instance:
+      prefer-ip-address: true
+
+
 
 logging:
   level:
